--- a/src/views/app/styles.css
+++ b/src/views/app/styles.css
@@ -1,3 +1,5 @@
+@import '../../styles/settings.css';
+
 .App {
   text-align: center;
 }
@@ -11,15 +13,15 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: var(--white);
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2rem;
 }
 
 .App-intro {
-  font-size: large;
+  font-size: 1.4rem;
 }
 
 @keyframes App-logo-spin {
