--- a/src/views/app/styles.css
+++ b/src/views/app/styles.css
@@ -3,7 +3,6 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
@@ -20,14 +19,5 @@
 
 .App-intro {
   font-size: 1.4rem;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+  margin-top: 10px;
 }
