--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -128,3 +128,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
