--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -14,4 +14,6 @@ body {
   font-size: 62.5%; /* 62.5% of 16px = 10px */
   text-rendering: optimizeLegibility;
   min-height: 100vh;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
