--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -85,6 +85,7 @@ video {
   font-size: 100%;
   font-family: inherit;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -136,4 +137,12 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  box-sizing: border-box;
+  padding: 0;
+  border: none;
+  background-color: inherit;
+}
+
+button {
+  cursor: pointer;
 }
