--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -85,7 +85,6 @@ video {
   font-size: 100%;
   font-family: inherit;
   vertical-align: baseline;
-  box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -105,6 +104,7 @@ section {
 
 body {
   line-height: 1;
+  box-sizing: border-box;
 }
 
 ol,
@@ -137,12 +137,11 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
-  box-sizing: border-box;
   padding: 0;
   border: none;
   background-color: inherit;
 }
 
-button {
-  cursor: pointer;
+* {
+  box-sizing: inherit;
 }
