--- a/src/components/input/styles.css
+++ b/src/components/input/styles.css
@@ -33,7 +33,7 @@
 }
 
 .input-on-focus {
-  border-bottom: 0.2rem solid #009b3a;
+  border-bottom: 0.2rem solid var(-kelley-green);
 }
 
 .input-error {
