--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -12,6 +12,7 @@ body {
   background-color: var(--white);
   color: var(--dark-gray);
   font-size: 62.5%; /* 62.5% of 16px = 10px */
+  font-family: 'Roboto', sans-serif;
   text-rendering: optimizeLegibility;
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
